@@ -81,27 +81,12 @@ GameController::GameController(QObject* parent)
 	};
 	setLuminanceLevel(0);
 
-	m_rtc.p = this;
-	m_rtc.override = GameControllerRTC::NO_OVERRIDE;
-	m_rtc.sample = [](GBARTCSource* context) {};
-	m_rtc.unixTime = [](GBARTCSource* context) -> time_t {
-		GameControllerRTC* rtc = static_cast<GameControllerRTC*>(context);
-		switch (rtc->override) {
-		case GameControllerRTC::NO_OVERRIDE:
-		default:
-			return time(nullptr);
-		case GameControllerRTC::FIXED:
-			return rtc->value;
-		case GameControllerRTC::FAKE_EPOCH:
-			return rtc->value + rtc->p->m_threadContext.gba->video.frameCounter * (int64_t) VIDEO_TOTAL_LENGTH / GBA_ARM7TDMI_FREQUENCY;
-		}
-	};
-
 	m_threadContext.startCallback = [](GBAThread* context) {
 		GameController* controller = static_cast<GameController*>(context->userData);
 		controller->m_audioProcessor->setInput(context);
 		context->gba->luminanceSource = &controller->m_lux;
-		context->gba->rtcSource = &controller->m_rtc;
+		GBARTCGenericSourceInit(&controller->m_rtc, context->gba);
+		context->gba->rtcSource = &controller->m_rtc.d;
 		context->gba->rumble = controller->m_inputController->rumble();
 		context->gba->rotationSource = controller->m_inputController->rotationSource();
 		controller->m_fpsTarget = context->fpsTarget;
@@ -730,16 +715,16 @@ void GameController::setLuminanceLevel(int level) {
 }
 
 void GameController::setRealTime() {
-	m_rtc.override = GameControllerRTC::NO_OVERRIDE;
+	m_rtc.override = GBARTCGenericSource::RTC_NO_OVERRIDE;
 }
 
 void GameController::setFixedTime(const QDateTime& time) {
-	m_rtc.override = GameControllerRTC::FIXED;
+	m_rtc.override = GBARTCGenericSource::RTC_FIXED;
 	m_rtc.value = time.toMSecsSinceEpoch() / 1000;
 }
 
 void GameController::setFakeEpoch(const QDateTime& time) {
-	m_rtc.override = GameControllerRTC::FAKE_EPOCH;
+	m_rtc.override = GBARTCGenericSource::RTC_FAKE_EPOCH;
 	m_rtc.value = time.toMSecsSinceEpoch() / 1000;
 }
 
