@@ -90,6 +90,7 @@ Misc:
  - GBA: Don't include GBACLIDebugger struct unless needed
  - SDL: Clean up GL context
  - GBA Audio: Implement audio reset for channels A/B
+ - GBA Hardware: Backport generic RTC source into core
 
 0.2.1: (2015-05-13)
 Bugfixes:
